# AI-Court

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  render.yaml  run-local.ps1
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .env.local.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260425_0001_initial_schema.py
backend/app/: logging.py  main.py  settings.py
backend/app/api/routes/: cases.py  health.py  laws.py  pdfs.py  trials.py  verdicts.py
backend/app/api/websockets/: trial_socket.py
backend/app/application/services/: precedent_service.py  trial_broadcaster.py  trial_orchestrator.py
backend/app/domain/entities/: case.py  trial_event.py  verdict.py
backend/app/domain/policies/: sentencing_policy.py
backend/app/domain/value_objects/: guilt_index.py  legal_principle.py
backend/app/infrastructure/ai/: agent_runtime.py
backend/app/infrastructure/db/: models.py  repositories.py  session.py
backend/app/infrastructure/pdf/: verdict_pdf.py
backend/app/infrastructure/queue/: celery_app.py  tasks.py
backend/tests/: test_agent_runtime.py  test_guilt_index.py  test_sentencing_policy.py
frontend/: .env.production.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/components/: MetricCard.tsx
frontend/src/features/case-intake/: CaseIntakePanel.tsx
frontend/src/lib/: api.ts  config.ts  socket.ts  validators.ts
frontend/src/styles/: global.css
(+2 files in other folders)
