[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-court-backend"
version = "0.1.0"
description = "AI Court backend: adversarial multi-agent fictional trial system."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pgvector>=0.3.2",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "reportlab>=4.2.2",
  "qrcode[pil]>=7.4.2",
  "python-multipart>=0.0.9",
  "orjson>=3.10.7",
  "greenlet>=3.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[[tool.mypy.overrides]]
module = ["celery", "pgvector.*", "reportlab.*"]
ignore_missing_imports = true
